# mcp

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  =0.23.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  glama.json  pyproject.toml  server.py  smithery.yaml  test.py  test_secure_defaults.py
.github/workflows/: bump-version.yaml  bump-version.yml  bump_version.yml  docker.yaml  helm-publish.yaml  lint.yml  publish.yml  test.yml
chart/semgrep-mcp/: Chart.yaml  README.md  values.yaml
chart/semgrep-mcp/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
docs/: secure_defaults_tool.md
examples/: http_streamable_client.py  sse_client.py  streamable_http_client.py
js/: README.md  index.ts  package-lock.json  package.json  test_comprehensive.js  test_scan.js  test_schema.js  test_schema_validation.js  test_server.js  test_simple.js
js/src/: models.ts
scripts/: bump_version.py  configure_semgrep_mcp.py
src/semgrep_mcp/: __init__.py  __main__.py  models.py  secure_defaults.py  semgrep.py  server.py  token_verifier.py
src/semgrep_mcp/data/: secure_defaults.json
src/semgrep_mcp/utilities/: tracing.py  utils.py
src/utilities/: tracing.py
tests/: conftest.py  test_server.py  utils.py
tests/integration/: test_claude_code_integration.py  test_create_temp_files.py  test_local_scan.py  test_semgrep_findings.py  test_sse_client.py  test_stdio_client.py  test_streamable_client.py
tests/unit/: test_safe_join.py  test_secure_defaults.py  test_token_verifier.py
