[project]
name = "semgrep-mcp"
version = "0.1.5"
description = "MCP Server for using Semgrep to scan code"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Seth Jaksik", email = "seth@semgrep.com" },
    { name = "Drew Dennison", email = "drew@semgrep.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.6.0",
    "semgrep>=1.117.0",
]

dev-dependencies = ["mcp[cli]>=1.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
semgrep-mcp = "server:main"



[project.urls]
Homepage = "https://github.com/semgrep/mcp"
Repository = "https://github.com/semgrep/mcp.git"
Issues = "https://github.com/semgrep/mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
